--- a/backend/backend/src/main/resources/application.yaml
+++ b/backend/backend/src/main/resources/application.yaml
@@ -1,15 +1,17 @@
 server:
-  port: 8080
+  port: 12888
   servlet:
-    context-path: /course
+    context-path:
 spring:
   jpa:
     show-sql: true
     properties:
       hibernate:
+        auto-create: true
         dialect: org.hibernate.dialect.PostgreSQL95Dialect
         temp:
           use_jdbc_metadata_defaults: false
+    generate-ddl: true
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/postgres?currentSchema=public
